<resources>
    <string name="app_name">Expenditure calculator</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add">Add new expense</string>
    <string name="name_of_expense">Name of the expense</string>
    <string name="new_expanse">New expense</string>
    <string name="date_expanse">Date of the expanse:</string>
    <string name="add">Add</string>
    <string name="total">Total:</string>
    <string name="amount">Amount</string>
    <string name="action_clear">Clear all</string>
    <string name="action_del">Remove expenditure</string>
    <string name="button_del">Delete</string>
    <string name="which_del">ID of removed expenditure</string>
    <string name="info_del">The expense with the selected id number does not exist !</string>
    <string name="added">Added: </string>
    <string name="text_for">" for "</string>
    <string name="without_date">without date</string>
    <string name="text_on">" on "</string>
    <string name="addition_window">The addition window has been closed !</string>
    <string name="temp_info_exist">The expense with the selected id number does not exist !</string>
    <string name="double_back">Tap back button in order to exit</string>
</resources>
