<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AddActivity"
    tools:showIn="@layout/activity_add">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name_expenditure"
                android:layout_width="match_parent"
                android:layout_height="83dp"
                android:ems="10"
                android:hint="@string/name_of_expense"
                android:inputType="textPersonName"/>

            <TextView
                android:id="@+id/calendarInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_expanse"
                android:layout_marginTop="20dp"
                android:textSize="20dp"/>

            <CalendarView
                android:id="@+id/calendar"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:digits="0123456789."
                android:ems="10"
                android:hint="@string/amount"
                android:inputType="numberDecimal"
                android:maxLength="9"
                android:textIsSelectable="false"/>

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:onClick="add_new"
                android:text="@string/add"/>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>