<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text=""
                    android:textSize="20sp"
                    android:visibility="invisible"/>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text=""
                    android:textSize="20sp"
                    android:visibility="invisible"/>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text=""
                    android:textSize="20sp"
                    android:visibility="invisible"/>

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:padding="4dp"
                android:scrollbars="vertical"/>

            <EditText
                android:id="@+id/editText_del"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/which_del"
                android:inputType="numberSigned"
                android:visibility="invisible"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/total"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:visibility="visible"/>

                <TextView
                    android:id="@+id/textView_prize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text=""
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="30sp"
                    android:visibility="visible"/>
            </LinearLayout>

            <Button
                android:id="@+id/button_ok_del"
                android:layout_width="match_parent"
                android:layout_height="70sp"
                android:onClick="del_one_expense"
                android:text="@string/button_del"
                android:textSize="20sp"
                android:visibility="invisible"/>


        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>